cluster/apps/media/notifiarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
spec:
  externalName: notifiarr.home
  ports:
    - name: http
      port: 5454
      protocol: TCP
      targetPort: 5454
  sessionAffinity: None
  type: ExternalName
