cluster/apps/media/notifiarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifiarr
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud-download"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    external-dns/is-public: "true"
spec:
  tls:
    - secretName: "${SECRET_DOMAIN_ME/./-}-tls"
      hosts:
        - notifiarr.${SECRET_DOMAIN_ME}
  rules:
    - host: notifiarr.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notifiarr
                port:
                  number: 5454
